test/src/e2e_vm_tests/test_programs/should_fail/ref_var_pattern/src/main.sw
script;

fn main() -> u32 {
    match 0 {
        ref x => 0,
    }
}
